--- a/config
+++ b/config
@@ -1,16 +1,7 @@
-# terminal = app (must precede regex definitions)
-terminal                = urxvtc
-
-# app->term (app is launched in terminal)
-
-# @ regex = app (matched against argument given to xdg-open)
-@ ^(https?://|www\.)    = $BROWSER
-
-# regex = app (matched against mimetype of argument)
-# note: use mimetype -b FILE to determine mimetype
-image/                  = sxiv
-video/                  = mplayer
-audio/                  = mplayer->term
-text/                   = $EDITOR->term
-application/pdf         = zathura
-inode/directory         = ranger->term
+@^(https?://|www\.) = $BROWSER
+image/              = sxiv
+video/              = mplayer
+audio/              = mplayer?:st
+text/               = $EDITOR?:st
+application/pdf     = zathura
+inode/directory     = ranger?:st
